Alterações até 900px

--- a/estilo/mediaquery.css
+++ b/estilo/mediaquery.css
@@ -170,6 +170,10 @@ header {
         padding: 20px 10px;
     }
 
+    section#img {
+        background: linear-gradient(green,white,red);
+    }
+
     section#img2 {
         display: none;
     }
